# c2s-dspy

./: .env.example  .gitignore  Dockerfile.neo4j  LICENSE  Makefile  README.md  c2s.py  docker-compose.yml  env-template.txt  example_logging.py  example_usage.py  logging_config.py  main.py  models.py  neo4j_client.py  pyproject.toml  test_debug_logging.py  test_ignore_extensions.py  test_neo4j.py  utils.py
docs/: neo4j-setup.md  uv-usage.md
sample_inputs/: sample_code.cbl
